--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "next": "14.2.5",
+    "@headlessui/react": "^1.7.14",
+		"@heroicons/react": "^2.0.18",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@tailwindcss/forms": "^0.5.3",
+		"async-mutex": "^0.4.0",
+		"autoprefixer": "10.4.14",
+		"classnames": "^2.3.2",
+		"react-icons": "^4.8.0",
+		"react-redux": "^8.0.5",
+		"react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "typescript": "^5",
